--- a/package.json
+++ b/package.json
@@ -29,8 +29,13 @@
     "@capacitor/status-bar": "1.0.3",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/qr-scanner": "^5.36.0",
+    "@ionic-native/splash-screen": "^5.36.0",
+    "@ionic-native/sqlite": "^5.36.0",
+    "@ionic-native/status-bar": "^5.36.0",
     "@ionic/angular": "^5.5.2",
+    "@ionic/storage": "^3.0.6",
     "cordova-android": "9.1.0",
+    "cordova-browser": "6.0.0",
     "ionic-native": "^2.9.0",
     "jsqr": "^1.4.0",
     "rxjs": "~6.6.0",
@@ -93,7 +98,8 @@
       "cordova-sqlite-storage": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
